final-final fixes

--- a/src/index.html
+++ b/src/index.html
@@ -60,13 +60,6 @@
       <div class="container">
         <div class="menu__content">
           <div class="menu__logo-container">
-            <a href="#">
-              <img
-                src="./images/letter-x.png"
-                alt="cross"
-                class="menu__cross"
-              >
-            </a>
             <a href="#" class="menu__logo">
               <h1 class="logo">
                 NA
@@ -112,7 +105,11 @@
 
 
           <a href="#search-bar">
-            <div class="menu__loop"></div>
+            <img
+              src="./images/letter-x.png"
+              alt="close"
+              class="menu__cross"
+            >
           </a>
 
         </div>
