--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <div class="top-actions">
-      <div>
-        <a class="icon icon--menu" href="#menu"></a>
-      </div>
-      <a class="header__logo" href="#">
-        <img
-          class="header__logo-image"
-          src="/images/logo.svg"
-          alt=""
-        >
-      </a>
-    </div>
     <header class="page__section header" id="header">
+      <div class="top-actions">
+        <div>
+          <a class="icon--menu icon" href="#menu"></a>
+        </div>
+        <a class="header__logo" href="#">
+          <img
+            class="header__logo-image"
+            src="/images/logo.svg"
+            alt=""
+          >
+        </a>
+      </div>
       <div class="header__events">
         <p>
             ПОДІЇ
@@ -34,9 +32,11 @@
       </div>
     </header>
 
-    <section class="top">
-      <div class="desktop-wrapper">
-        <h1 class="header__title">ХУДОЖ<span class="transparent">НІЙ</span> МУЗЕЙ</h1>
+    <section class="capital">
+      <div class="capital__information">
+        <h1 class="capital__title">
+          худож<span class="capital__title--empty">ній</span><br>музей
+        </h1>
         <form class="form">
           <input
             class="form__input"
@@ -54,10 +54,10 @@
           </button>
         </form>
       </div>
+      <div class="capital__image"></div>
     </section>
-    <div class="header__header-image"></div>
 
-    <nav class="page__menu menu" id="menu">
+    <section class="menu page__menu" id="menu">
       <div class="top-actions">
         <a class="icon icon--cross" href="#"></a>
         <a class="logo" href="#">
@@ -70,7 +70,7 @@
         </a>
       </div>
       <div class="nav-container">
-        <nav class="menu__nav">
+        <nav class="nav menu__nav">
           <ul class="menu__list">
             <li class="menu__item">
               <div class="hover">
@@ -137,7 +137,7 @@
         </nav>
       </div>
     </div>
-    </nav>
+    </section>
 
     <main class="page__main">
       <section class="page__section events">
@@ -167,7 +167,7 @@
                   Йду і повертаюсь
                 </a>
               </h3>
-              <p>
+              <p class="events__exhibition-info events__exhibition-info_exhibition-1">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
               </p>
             </div>
@@ -195,7 +195,7 @@
                   І спогади і мрії
                 </a>
               </h3>
-              <p>
+              <p class="events__exhibition-info">
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
@@ -301,6 +301,7 @@
         </div>
       </section>
     </main>
+
     <footer class="page__section footer" id="footer">
       <div class="footer-wrapper">
         <div class="logo-wrapper">
@@ -445,5 +446,6 @@
         <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
       </div>
     </footer>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
