--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,451 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./images/logo.png">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <svg class="page__icon">
+      <symbol id="close" viewBox="0 0 329.26933 329">
+        <g>
+          <path d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0"></path>
+        </g>
+      </symbol>
+      <symbol id="search" viewBox="0 0 632.399 632.399">
+        <g>
+          <path d="M255.108,0C119.863,0,10.204,109.66,10.204,244.904c0,135.245,109.659,244.905,244.904,244.905
+          c52.006,0,100.238-16.223,139.883-43.854l185.205,185.176c1.671,1.672,4.379,1.672,5.964,0.115l34.892-34.891
+          c1.613-1.613,1.47-4.379-0.115-5.965L438.151,407.605c38.493-43.246,61.86-100.237,61.86-162.702
+          C500.012,109.66,390.353,0,255.108,0z M255.108,460.996c-119.34,0-216.092-96.752-216.092-216.092
+          c0-119.34,96.751-216.091,216.092-216.091s216.091,96.751,216.091,216.091C471.199,364.244,374.448,460.996,255.108,460.996z"></path>
+        </g>
+      </symbol>
+    </svg>
+
+    <header class="page__header header" id="top">
+      <a href="#menu" class="header__menu-toggler">
+        <img
+          src="images/menu.png"
+          alt="Меню"
+        >
+      </a>
+
+      <a href="#" class="header__logo logo">
+        NA
+        <br>
+        MU
+      </a>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__wrapper">
+          <div class="menu__top">
+            <a href="#top" class="menu__close">
+              <svg class="menu__img">
+                <use xlink:href="#close"></use>
+              </svg>
+            </a>
+
+            <a href="#" class="menu__logo logo">
+              NA
+              <br>
+              MU
+            </a>
+
+            <a href="#" class="menu__search">
+              <svg class="menu__img">
+                <use xlink:href="#search"></use>
+              </svg>
+            </a>
+          </div>
+
+          <div class="menu__nav">
+            <a href="#gallery" class="menu__nav-link">
+              Галерея
+            </a>
+            <a href="#events" class="menu__nav-link">
+              Виставки та події
+            </a>
+            <a href="#info" class="menu__nav-link">
+              Відвідування
+            </a>
+            <a href="#cta" class="menu__nav-link">
+              Стати нашим другом
+            </a>
+            <a href="#cta" class="menu__nav-link">
+              Про Нас
+            </a>
+            <a href="#cta" class="menu__nav-link">
+              Магазин
+            </a>
+            <a href="#cta" class="menu__nav-link">
+              Блог
+            </a>
+            <a href="#info" class="menu__nav-link">
+              Контакти
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="page__section section section__intro intro" id="intro">
+        <img
+          src="images/intro.png"
+          alt="Фасад музею"
+          class="intro__img"
+        >
+        <div class="intro__info">
+          <h1 class="intro__title">
+            Худож<span class="intro__title-empty">ній</span>
+            <br>
+            музей
+          </h1>
+          <a href="#cta" class="intro__link">
+            Квитки
+          </a>
+        </div>
+      </section>
+
+      <section class="page__section section section__events events" id="events">
+        <div class="container">
+          <a href="#events" class="events__start">Події</a>
+
+          <h1 class="page__section-title section__title">
+            Актуальні події
+          </h1>
+
+          <div class="events__item">
+            <a href="#" class="events__img-container">
+              <picture>
+                <source media="(min-width: 1920px)" srcset="images/events/event_1-870.png">
+                <source media="(min-width: 1280px)" srcset="images/events/event_1-700.png">
+                <source media="(min-width: 768px)" srcset="images/events/event_1-670.png">
+                <img
+                src="images/events/event_1-280.png"
+                alt="Гори і море"
+                class="events__img"
+              >
+              </picture>
+            </a>
+            <div class="events__info">
+              <div class="events__details">
+                <span class="events__type">Виставка</span>
+                <span class="events__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="events__title">
+                <a href="#">Йду і повертаюсь</a>
+              </h3>
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__item events__item--reverse">
+            <a href="#" class="events__img-container events__img-container--reverse">
+              <picture>
+                <source media="(min-width: 1920px)" srcset="images/events/event_2-870.png">
+                <source media="(min-width: 1280px)" srcset="images/events/event_2-700.png">
+                <source media="(min-width: 768px)" srcset="images/events/event_2-670.png">
+                <img
+                src="images/events/event_2-280.png"
+                alt="Дівчина і павлін"
+                class="events__img"
+              >
+              </picture>
+            </a>
+            <div class="events__info events__info--reverse">
+              <div class="events__details">
+                <span class="events__type">Виставка</span>
+                <span class="events__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="events__title">
+                <a href="#">І спогади і мрії</a>
+              </h3>
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__item events__item--lecture">
+          <div class="events__img-container events__img-container--lecture">
+            <picture>
+              <source media="(min-width: 1920px)" srcset="images/events/event_3-1920.png">
+              <source media="(min-width: 1280px)" srcset="images/events/event_3-1280.png">
+              <source media="(min-width: 768px)" srcset="images/events/event_3-700.png">
+              <img
+              src="images/events/event_3-320.png"
+              alt="Небо на заході сонця"
+              class="events__img events__img--lecture"
+            >
+            </picture>
+          </div>
+          <div class="events__info events__info--lecture">
+            <div class="events__details events__details--lecture">
+              <span class="events__type events__type--lecture">Лекція</span>
+              <span class="events__date events__date--lecture">26/08/2019 - 11:00</span>
+            </div>
+            <h3 class="events__title events__title--lecture">
+              <a href="#">
+                Від класицизму до романтизму
+              </a>
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section section section__gallery gallery" id="gallery">
+        <div class="container">
+          <h1 class="page__section-title section__title">
+            Галерея
+          </h1>
+          <div class="gallery__images">
+            <img
+              src="images/gallery/gallery_1.png"
+              alt="Жінка в українському одязі"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery_2.png"
+              alt="Хутір взимку"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery_3.png"
+              alt="Білі гуси"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery_4.png"
+              alt="Дівчинка сидить на лавці в парку"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery_5.png"
+              alt="Захід сонця на морі"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery_6.png"
+              alt="Люди сходяться на ринок"
+              class="gallery__image"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section section section__cta cta" id="cta">
+        <div class="cta__wrapper">
+          <div class="cta__subscription">
+            <h1 class="page__section-title section__title cta__title">
+              Підписка
+            </h1>
+            <p class="cta__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+          </div>
+          <form
+            action="#"
+            class="cta__form"
+            method="POST"
+            name="form"
+          >
+            <input
+              type="text"
+              class="cta__email"
+              name="email"
+              placeholder="E-mail"
+            >
+            <button class="cta__btn">
+              <a href="#" class="cta__link"></a>
+            </button>
+          </form>
+        </div>
+      </section>
+
+      <section class="page__section section section__info info" id="info">
+        <div class="container info__wrapper">
+          <div class="info__media">
+            <a href="#" class="info__logo logo">
+              NA
+              <br>
+              MU
+            </a>
+            <div class="info__media-networks">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="info__media-link"
+              >
+                <img
+                  src="images/facebook.png"
+                  alt="facebook"
+                  class="info__media-img"
+                >
+              </a>
+              <a
+                href="https://www.instagram.com/namu.museum/?igshid=7erp91t0u2vq"
+                class="info__media-link"
+              >
+                <img
+                  src="images/instagram.png"
+                  alt="instagram"
+                  class="info__media-img"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="info__container">
+            <div class="info__details">
+              <div class="info__schedule">
+                <div class="info__work-days">
+                  <h6 class="info__title">Графік роботи</h6>
+                  <span class="info__work-day">
+                    <span class="info__work-time">12:00-20:00</span>
+                    середа
+                  </span>
+                  <span class="info__work-day">
+                    <span class="info__work-time">12:00-20:00</span>
+                    четвер
+                  </span>
+                  <span class="info__work-day">
+                    <span class="info__work-time">12:00-20:00</span>
+                    п'ятниця
+                  </span>
+                  <span class="info__work-day">
+                    <span class="info__work-time">12:00-20:00</span>
+                    субота
+                  </span>
+                  <span class="info__work-day">
+                    <span class="info__work-time">12:00-20:00</span>
+                    неділя
+                  </span>
+                </div>
+                <div class="info__notice">
+                  <span class="info__notice-item">
+                    Вихідні: понеділок,
+                    <br>
+                    вівторок
+                  </span>
+                  <span class="info__notice-item">
+                    Каса припиняє роботу
+                    <br>
+                    за 1 годину
+                    <br>
+                    до закриття музею
+                  </span>
+                </div>
+              </div>
+
+              <div class="info__contacts">
+                <h6 class="info__title">Контакти:</h6>
+                <a
+                  href="https://goo.gl/maps/ruMcAnpSKcj49PtC7"
+                  class="info__contacts-link"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a
+                  href="tel:+38 (044) 278-13-57"
+                  class="info__contacts-link"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a
+                  href="tel:+38 (044) 278-74-54"
+                  class="info__contacts-link"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="info__contacts-link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+
+            <a href="#top" class="info__btn"></a>
+
+            <div class="info__menu">
+              <div class="info__menu-list">
+                <ul>
+                  <li class="info__menu-item">
+                    <a href="#gallery">
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="info__menu-item">
+                    <a href="#events">
+                      Виставки та події
+                    </a>
+                  </li>
+                  <li class="info__menu-item">
+                    <a href="#info">
+                      Відвідування
+                    </a>
+                  </li>
+                  <li class="info__menu-item">
+                    <a href="#cta">
+                      Стати нашим другом
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="info__menu-list">
+                <ul>
+                  <li class="info__menu-item">
+                    <a href="#cta">
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="info__menu-item">
+                    <a href="#cta">
+                      Магазин
+                    </a>
+                  </li>
+                  <li class="info__menu-item">
+                    <a href="#cta">
+                      Блог
+                    </a>
+                  </li>
+                  <li class="info__menu-item">
+                    <a href="#info">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page__footer footer">
+      <div class="footer__container container">
+        <p class="footer__text">
+          Designed by Zhyriada Marina
+        </p>
+        <p class="footer__text">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
