--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
         </a>
       </div>
       <div class="nav-container">
-        <nav class="nav menu__nav">
+        <nav class="menu-nav menu__nav">
           <ul class="menu__list">
             <li class="menu__item">
               <div class="hover">
@@ -396,7 +396,7 @@
             </a>
           </button>
         </div>
-        <nav class="nav">
+        <nav class="nav nav--line">
           <ul class="nav__list">
             <li class="nav__item">
               <a class="nav__link" href="#gallery">Галерея</a>
