add burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,64 @@
       type="image/x-icon"
       href="images/icons8-puzzle-30.png"
     >
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="main-content">
     <header class="header" id="header">
+      <div class="header__nav-items">
+        <nav class="header__nav-items-container">
+          <ul class="header__nav-list">
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-item-link">Home</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#About" class="header__nav-item-link">About us</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#gallery" class="header__nav-item-link">gallery</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#testimonials" class="header__nav-item-link">testimonials</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#contacts" class="header__nav-item-link">Contacts</a>
+            </li>
+            <li class="header__nav-item-number"> +1 234 555-55-55</li>
+            <a href="tel:+33333333333">
+              <span class="header__nav-item-link-to-call">call to order</span>
+            </a>
+          </ul>
+        </nav>
+      </div>
       <div class="header__burger-logo-container">
-        <div class="header__burger"><div class="uil uil-bars header__uil-bars"></div></div>
+        <!--  -->
+        <div class="header__container">
+          <input
+            type="checkbox"
+            id="burger"
+            class="header__nav-toggler"
+          >
+          <label for="burger" class="header__nav-icon"></label>
+          <a href="#Home">
+            <!-- <img src="./images/logo.png"
+              alt="logo-miami"
+              class="header__logo"
+            > -->
+          </a>
+          <a href="tel:+33333333333" class="header__text-number-to-call">
+            <!-- <img src="./images/phone.svg"
+              alt="Phone-call"
+              class="header__phone-call"
+            > -->
+          </a>
+        </div>
         <div class="header__logo">NA<br>VU</div>
         <div></div>
       </div>
+      <!--  -->
       <div class="header__ticket-title-container">
         <div class="header__extion-text">ПОДІЇ</div>
         <h1 class="header__title">ХУДОЖ<span class="header__text-opacity">НІЙ</span><br> МУЗЕЙ</h1>
@@ -38,7 +86,7 @@
       </div>
       <div class="header__photo"></div>
     </header>
-    <main class="main">
+    <main class="main" id="About">
       <h2 class="main__title" id="title">Актуальні події</h2>
       <div class="main__container-galery">
         <img
@@ -95,7 +143,7 @@
         </div>
       </div>
     </div>
-    <main class="main-footer" id="galery">
+    <main class="main-footer" id="gallery">
       <div class="main-footer__header-title">
         Галерея
       </div>
@@ -181,7 +229,7 @@
         </div>
       </div>
       <!-- 2 -->
-      <div class="footer__container-for-block">
+      <div class="footer__container-for-block" id="contacts">
         <div class="footer__center-container">
           <div class="footer__center-left-block">
             <div class="footer__center-left-title">Графік роботи</div>
