--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page__header header" id="top">
+    <button id="page__top-btn" title="Go tot top"></button>
+
+    <header class="page__header header">
       <a href="#menu" class="header__menu-toggler">
         <img
           src="images/menu.png"
@@ -255,6 +257,7 @@
               class="cta__email"
               name="email"
               placeholder="E-mail"
+              required
             >
             <button class="cta__btn">
               <a href="#" class="cta__link"></a>
@@ -277,7 +280,7 @@
                 class="info__media-link"
               >
                 <img
-                  src="images/facebook.png"
+                  src="images/facebook.svg"
                   alt="facebook"
                   class="info__media-img"
                 >
@@ -287,7 +290,7 @@
                 class="info__media-link"
               >
                 <img
-                  src="images/instagram.png"
+                  src="images/instagram.svg"
                   alt="instagram"
                   class="info__media-img"
                 >
@@ -365,8 +368,6 @@
                 </a>
               </div>
             </div>
-
-            <a href="#top" class="info__btn"></a>
 
             <div class="info__menu">
               <div class="info__menu-list">
