--- a/src/index.html
+++ b/src/index.html
@@ -283,16 +283,17 @@
           </div>
           <form
             action="#"
-            method="POST"
+            autocomplete="off"
             class="subscribe__form"
           >
             <input
+              name = "email"
               type="email"
               class="subscribe__input"
               placeholder="E-mail"
               required
             >
-            <button type="submit" class="subscribe__button">
+            <button class="subscribe__button">
               <img src="./images/button-arrow.svg" alt="button">
             </button>
           </form>
