fix some problem with navigation

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                   class="btn header__btn btn--header">
                     Квитки
                 </a>
-                <a class="btn-arrow" href="#"></a>
+                <a class="btn-arrow" href="#events"></a>
               </div>
             </div>
           </div>
@@ -109,7 +109,7 @@
               <a class="menu__link" href="#">Магазин</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="#">Блог</a>
+              <a class="menu__link" href="#subscription">Блог</a>
             </li>
             <li class="menu__item">
               <a class="menu__link" href="#footer">Контакти</a>
