fixes after Pelaheya review

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,9 @@
             </a>
           </li>
           <li class="navigation-menu__list-item">
-            <p href="#" class="navigation-menu__list-item-link">
+            <a href="#subscribe" class="navigation-menu__list-item-link">
               Про Нас
-            </p>
+            </a>
           </li>
           <li class="navigation-menu__list-item">
             <p href="#" class="navigation-menu__list-item-link">
@@ -55,7 +55,7 @@
             </p>
           </li>
           <li class="navigation-menu__list-item">
-            <p href="#" class="navigation-menu__list-item-link">
+            <p href="#subscribe" class="navigation-menu__list-item-link">
               Блог
             </p>
           </li>
