--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="images/favi.png"
+    >
   </head>
   <body class="page">
     <header class="header page__header">
@@ -42,7 +47,7 @@
             МУЗЕЙ
           </h2>
 
-          <a href="#" class="button header__button">
+          <a href="#actual" class="button header__button">
             <div class="button__text"></div>
 
             <div class="button__arrow"></div>
@@ -70,48 +75,48 @@
 
             <ul class="menu__list">
               <li class="menu__li">
-                <a href="" class="menu__link">Галерея</a>
+                <a href="#gallery" class="menu__link">Галерея</a>
               </li>
 
               <li class="menu__li">
-                <a href="" class="menu__link">Виставки та події</a>
+                <a href="#actual" class="menu__link">Виставки та події</a>
               </li>
 
               <li class="menu__li">
-                <a href="" class="menu__link">Відвідування</a>
+                <a href="#actual" class="menu__link">Відвідування</a>
               </li>
 
               <li class="menu__li">
-                <a href="" class="menu__link">Стати нашим другом</a>
+                <a href="#subscribe" class="menu__link">Стати нашим другом</a>
               </li>
 
               <li class="menu__li">
-                <a href="" class="menu__link">Про Нас</a>
+                <a href="#" class="menu__link">Про Нас</a>
               </li>
 
               <li class="menu__li">
-                <a href="" class="menu__link">Магазин</a>
+                <a href="#" class="menu__link">Магазин</a>
               </li>
 
               <li class="menu__li">
-                <a href="" class="menu__link">Блог</a>
+                <a href="#subscribe" class="menu__link">Блог</a>
               </li>
 
               <li class="menu__li">
-                <a href="" class="menu__link">Контакти</a>
+                <a href="#footer" class="menu__link">Контакти</a>
               </li>
             </ul>
+
           </div>
-
-
-          <a href="#search-bar">
-            <img
-              src="./images/letter-x.png"
-              alt="close"
-              class="menu__cross"
-            >
-          </a>
-
+          <div class="menu__cross-container">
+            <a href="#">
+              <img
+                src="./images/letter-x.png"
+                alt="close"
+                class="menu__cross"
+              >
+            </a>
+          </div>
         </div>
       </div>
 
@@ -323,7 +328,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
 
       <div class="container">
         <div class="grid grid--desktop grid--footer">
@@ -338,7 +343,7 @@
               </div>
 
               <div class="footer__socia">
-                <a href="#" class="footer__link">
+                <a href="https://www.facebook.com/namu.museum/" class="footer__link">
                   <img
                     src="./images/Facebook.png"
                     alt="Facebook"
@@ -346,7 +351,7 @@
                   >
                 </a>
 
-                <a href="#" class="footer__link">
+                <a href="https://www.instagram.com/namu.museum/?hl=uk" class="footer__link">
                   <img
                     src="./images/insta.png"
                     alt="insta"
