made changes in gallery block

--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
               </div>
 
               <div class="grid__item grid__item--1--2 events__item--tab">
-                <div class="events__picture-container">
+                <div class="events__picture-container events__picture-container--pict-1">
                   <img
                     src="images/main_section/Rectangle 2.2@3x.jpg"
                     alt="come"
@@ -220,6 +220,68 @@
 
         <section class="page__section gallery gallery--bot" id="gallery">
           <div class="container">
+            <h2 class="gallery__sub-title--small-screns">Галерея</h2>
+            <div class="carousel-container">
+              <button class="previous-item" id="prevBtn">
+                <img src="images/sl_left.svg" alt="prev">
+              </button>
+              <button class="next-item" id="nextBtn">
+                <img src="images/sl_right.svg" alt="next">
+              </button>
+
+              <div class="carousel-slider">
+                <img
+                  src="images/gallery/gal_6.jpg"
+                  alt="pict6"
+                  class="slide-pict"
+                  id="lastClone"
+                >
+
+                <img
+                  src="images/gallery/gal_1.jpg"
+                  alt="pict1"
+                  class="slide-pict"
+                >
+
+                <img
+                  src="images/gallery/gal_2.jpg"
+                  alt="pict2"
+                  class="slide-pict"
+                >
+
+                <img
+                  src="images/gallery/gal_3.jpg"
+                  alt="pict3"
+                  class="slide-pict"
+                >
+
+                <img
+                  src="images/gallery/gal_4.jpg"
+                  alt="pict4"
+                  class="slide-pict"
+                >
+
+                <img
+                  src="images/gallery/gal_5.jpg"
+                  alt="pict5"
+                  class="slide-pict"
+                >
+
+                <img
+                  src="images/gallery/gal_6.jpg"
+                  alt="pict6"
+                  class="slide-pict"
+                >
+
+                <img
+                  src="images/gallery/gal_1.jpg"
+                  alt="pict1"
+                  class="slide-pict"
+                  id="firstClone"
+                >
+              </div>
+            </div>
+
             <div class="grid">
 
               <div class="grid__item grid__item--1--2 grid__item--tablet-1-1">
@@ -290,7 +352,7 @@
                     <h2 class="sign-up__sub-title sign-up__sub-title--bot">Підписка</h2>
                     <p class="sign-up__text sign-up__text--bot">Бути в курсі всіх актуальних подій та останніх новин.</p>
                     <form
-                      action=""
+                      action="index.html"
                       method="POST"
                       class="sign-up__request"
                     >
@@ -300,7 +362,7 @@
                         class="sign-up__field"
                         required
                       >
-                      <button type="submit" class="sign-up__button">
+                      <button type="reset" class="sign-up__button">
                         <img
                           src="images/sign/sign_arr.svg"
                           alt="sign"
@@ -332,20 +394,30 @@
 
           <div class="grid__item grid__item--tablet-1-1">
             <div class="icon icon--footer">
-              <div class="icon__item">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                rel="noopener"
+                target="_blank"
+                class="icon__item"
+              >
                 <img
                   src="images/facebook.svg"
                   alt="facebook"
                   class="icon__soc"
                 >
-              </div>
-              <div class="icon__item">
+              </a>
+              <a
+                href="https://www.instagram.com/namu.museum/?hl=ru"
+                rel="noopener"
+                target="_blank"
+                class="icon__item"
+              >
                 <img
                   src="images/insta.svg"
                   alt="instagram"
                   class="icon__soc"
                 >
-              </div>
+              </a>
             </div>
           </div>
 
@@ -412,7 +484,7 @@
                 <a href="#events" class="footer__link">Виставки та події</a>
               </li>
               <li class="footer__item">
-                <a href="#art" class="footer__link">Відвідування</a>
+                <a href="#events" class="footer__link">Відвідування</a>
               </li>
               <li class="footer__item">
                 <a href="#sign-up" class="footer__link">Стати нашим другом</a>
@@ -440,5 +512,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
