--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <meta
+      name="viewport"
+      content="width=device-width,
+      initial-scale=1.0"
+    >
+    <title>National Art Museum of Ukraine</title>
+    <link
+      rel="shortcut icon"
+      href="./favicon.ico"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header>
+      <div class="container">
+        <div class="top-bar">
+          <a href="#menu" class="top-bar__menu-icon">
+          </a>
+          <a href="#" class="logo">
+            <div class="logo__name">
+              NA
+              <br>
+              MU
+            </div>
+          </a>
+          <img src="./images/search.svg" alt="search">
+        </div>
+      </div>
+
+      <nav id="menu">
+
+        <a href="#" class="logo">
+          <div class="logo__name">
+            NA
+            <br>
+            MU
+          </div>
+        </a>
+
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#gallery" class="menu__link">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href="#exhandevents" class="menu__link">Виставки та події</a>
+          </li>
+          <li class="menu__item">
+            <a href="#visiting" class="menu__link">Відвідування</a>
+          </li>
+          <li class="menu__item">
+            <a href="#bacomefriend" class="menu__link">Стати нашим другом</a>
+          </li>
+          <li class="menu__item">
+            <a href="#about-us" class="menu__link">Про Нас</a>
+          </li>
+          <li class="menu__item">
+            <a href="#shop" class="menu__link">Магазин</a>
+          </li>
+          <li class="menu__item">
+            <a href="#blog" class="menu__link">Блог</a>
+          </li>
+          <li class="menu__item">
+            <a href="#contacts" class="menu__link">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__title">
+        Художній
+        <br>
+        музей
+      </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
