--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/favicon.ico"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
 
-    <header class="header">
+    <header class="page__header header">
       <a href="#" class="header__logo link">NA<br>MU </a>
       <div class="header__indent"></div>
       <div class="header__elements">
@@ -24,7 +29,7 @@
           <div class="header__buy-button-text"></div>
           <div class="header__buy-button-arrow"></div>
         </a>
-        <a href="" class="header__events link">ПОДІЇ</a>
+        <a href="#events" class="header__events link">ПОДІЇ</a>
       </div>
       <div class="header__image"></div>
     </header>
@@ -36,10 +41,10 @@
             <a href="" class="menu__link link">Галерея</a>
           </li>
           <li class="menu__item">
-            <a href="" class="menu__link link">Виставки та події</a>
+            <a href="#events" class="menu__link link">Виставки та події</a>
           </li>
           <li class="menu__item">
-            <a href="" class="menu__link link">Відвідування</a>
+            <a href="#actual" class="menu__link link">Відвідування</a>
           </li>
           <li class="menu__item">
             <a href="" class="menu__link link">Стати нашим другом</a>
@@ -61,6 +66,60 @@
           <a href="" class="menu__search-icon">
             <img src="./images/search.svg" alt="search-icon">
           </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="page__section events" id="events">
+      <h2 class="page__section-title">Актуальні події</h2>
+      <div class="events__event event">
+        <img
+          src="./images/events/event1.png"
+          alt="first-event-image"
+          class="event__image"
+        >
+        <div class="event__description">
+          <div class="event__type-and-date">
+            <span class="event__type">ВИСТАВКА</span>
+            <span class="event__date">26.08-29.11.2019</span>
+          </div>
+          <div class="event__title">
+            Йду і повертаюсь
+          </div>
+          <div class="event__about">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br>
+            1980-1995 років.
+          </div>
+        </div>
+      </div>
+      <div class="events__event event event--reverse">
+        <img
+          src="./images/events/event2.png"
+          alt="second-event-image"
+          class="event__image"
+        >
+        <div class="event__description event__description--reverse">
+          <div class="event__type-and-date">
+            <span class="event__type">ВИСТАВКА</span>
+            <span class="event__date">26.08-29.11.2019</span>
+          </div>
+          <div class="event__title">
+            І спогади і мрії
+          </div>
+          <div class="event__about">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="page__lecture lecture" id="actual">
+      <div class="lecture__description">
+        <div class="lecture__type-and-date">
+          <span class="lecture__type">ЛЕКЦІЯ</span>
+          <span class="lecture__date">26/08/2019 - 11:00</span>
+        </div>
+        <div class="lecture__title">
+          Від класицизму до романтизму
         </div>
       </div>
     </div>
