--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="images/favi.png"
+      href="images/Безымянный.png"
     >
   </head>
   <body class="page">
@@ -91,7 +91,7 @@
               </li>
 
               <li class="menu__li">
-                <a href="#" class="menu__link">Про Нас</a>
+                <a href="#subscribe" class="menu__link">Про Нас</a>
               </li>
 
               <li class="menu__li">
@@ -335,11 +335,13 @@
           <div class="grid__item grid__item--1-1">
             <div class="footer__first">
               <div class="footer__logo">
-                <h1 class="logo">
-                  NA
-                  <br>
-                  MU
-                </h1>
+                <a href="#" class="nav__logo">
+                  <h1 class="logo">
+                    NA
+                    <br>
+                    MU
+                  </h1>
+                </a>
               </div>
 
               <div class="footer__socia">
@@ -409,7 +411,7 @@
                 <div class="footer__contacs">
                   <a
                     href="https://goo.gl/maps/tmfgVPRvdTDrjmFn8"
-                    class="footer__link"
+                    class="nav__link"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
@@ -418,15 +420,15 @@
                     Київ, 01001
                   </a>
                   <br>
-                  <a href="tel:+380442781357" class="footer__link">
+                  <a href="tel:+380442781357" class="nav__link">
                     тел. +38 (044) 278-13-57
                   </a>
                   <br>
-                  <a href="tel:+380442787454" class="footer__link">
+                  <a href="tel:+380442787454" class="nav__link">
                     факс +38 (044) 278-74-54
                   </a>
                   <br>
-                  <a href="mailto:info@namu.kiev.ua" class="footer__link">
+                  <a href="mailto:info@namu.kiev.ua" class="nav__link">
                     e-mail: info@namu.kiev.ua
                   </a>
                 </div>
@@ -441,10 +443,12 @@
           <div class="grid__item grid__item--8-9">
             <div class="footer__four">
               <div class="footer__nav">
-                <a href="#" class="nav__link">Галерея</a>
-                <a href="#" class="nav__link">Виставки та події</a>
-                <a href="#" class="nav__link">Відвідування</a>
-                <a href="#" class="nav__link">Стати нашим другом</a>
+                <ul class="nav__list">
+                  <li><a href="#gallery" class="nav__link">Галерея</a></li>
+                  <li><a href="#actual" class="nav__link">Виставки та події</a></li>
+                  <li><a href="#actual" class="nav__link">Відвідування</a></li>
+                  <li><a href="#subscribe" class="nav__link">Стати нашим другом</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -452,10 +456,12 @@
           <div class="grid__item grid__item--10-10">
             <div class="footer__five">
               <div class="footer__nav">
-                <a href="#" class="nav__link">Про Нас</a>
-                <a href="#" class="nav__link">Магазин</a>
-                <a href="#" class="nav__link">Блог</a>
-                <a href="#" class="nav__link">Контакти</a>
+                <ul class="nav__list">
+                  <li><a href="#actual" class="nav__link">Про Нас</a></li>
+                  <li><a href="#" class="nav__link">Магазин</a></li>
+                  <li><a href="#subscribe" class="nav__link">Блог</a></li>
+                  <li><a href="#footer" class="nav__link">Контакти</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -467,7 +473,7 @@
               </div>
 
               <div class="footer__design">
-                Designed by Zhyriada Marina
+                Designed by Vsevolod Maslak
               </div>
             </div>
 
