--- a/src/index.html
+++ b/src/index.html
@@ -182,13 +182,11 @@
               <span class="footer__bold-text">11:00 — 19:00</span> неділя
             </div>
             <div class="footer__schedule-info">
-              <span class="footer__bold-text">Вихідні:</span> понеділок,
+              Вихідні понеділок,
               <br>
-               вівторок
+               вівторок.
               <br>
-              Каса припиняє роботу за 1 годину
-              <br>
-              до закриття музею
+              Каса припиняє роботу за 1 годину до закриття музею.
             </div>
           </div>
           <div class="footer__contacts" id="contacts">
