--- a/src/index.html
+++ b/src/index.html
@@ -447,7 +447,7 @@
                   <li><a href="#gallery" class="nav__link">Галерея</a></li>
                   <li><a href="#actual" class="nav__link">Виставки та події</a></li>
                   <li><a href="#actual" class="nav__link">Відвідування</a></li>
-                  <li><a href="#subscribe" class="nav__link">Стати нашим другом</a></li>
+                  <li><a href="#subscribe" class="nav__link">Cтати нашим другом</a></li>
                 </ul>
               </div>
             </div>
