--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
     >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
 
@@ -123,6 +124,57 @@
         </a>
       </div>
     </div>
+    <div class="page__section">
+      <h2 class="page__section-title">Галерея</h2>
+      <div class="gallery">
+        <ul class="gallery__images">
+          <li class="gallery__images-box gallery__images-box--1">
+            <img
+              src="./images/gallery/1.png"
+              alt="gallery-image-1"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--2">
+            <img
+              src="./images/gallery/2.svg"
+              alt="gallery-image-2"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--3">
+            <img
+              src="./images/gallery/3.svg"
+              alt="gallery-image-3"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--4">
+            <img
+              src="./images/gallery/4.svg"
+              alt="gallery-image-4"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--5">
+            <img
+              src="./images/gallery/5.svg"
+              alt="gallery-image-5"
+              class="gallery__image">
+          </li>
+          <li class="gallery__images-box gallery__images-box--6">
+            <img
+              src="./images/gallery/6.svg"
+              alt="gallery-image-6"
+              class="gallery__image">
+          </li>
+        </ul>
+        <div class="gallery__buttons">
+          <button class="gallery__button gallery__prev-button">
+            &lt;
+          </button>
+          <button class="gallery__button gallery__next-button">
+          	&gt;
+          </button>
+        </div>
+      </div>
+    </div>
 
     <div class="page__subscription subscription" id="subscribe">
       <div class="subscription__text">
@@ -144,7 +196,7 @@
       </form>
     </div>
 
-    <footer class="footer page__section">
+    <footer class="page__footer footer page__section">
       <div class="footer__icons">
         <a href="#" class="footer__logo link">NA<br>MU</a>
         <div class="footer__soc-links">
@@ -168,6 +220,9 @@
       </div>
       <div class="footer__wrapper">
         <div class="footer__info">
+          <a href="#" class="footer__button">
+            <img src="./images/arrow4.svg" alt="button-icon">
+          </a>
           <div class="footer__schedule">
             <div class="footer__info-title">Графік роботи</div>
             <div class="footer__schedule-hours">
@@ -233,7 +288,10 @@
           </ul>
         </div>
       </div>
+      <div class="footer__copyright">
+        <span>Copyright © 2019. All Rights Reserved.</span>
+        <span>Designed by Zhyriada Marina</span>
+      </div>
     </footer>
-    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
