--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <a href="#" class="menu__logo link">NA<br>MU </a>
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="" class="menu__link link">Галерея</a>
+            <a href="#gallery" class="menu__link link">Галерея</a>
           </li>
           <li class="menu__item">
             <a href="#events" class="menu__link link">Виставки та події</a>
@@ -124,7 +124,7 @@
         </a>
       </div>
     </div>
-    <div class="page__section">
+    <div class="page__section" id="gallery">
       <h2 class="page__section-title">Галерея</h2>
       <div class="gallery">
         <ul class="gallery__images">
@@ -262,7 +262,7 @@
         <div class="footer__nav">
           <ul class="footer__nav-list">
             <li class="footer__nav-item">
-              <a href="" class="footer__nav-link link">Галерея</a>
+              <a href="#gallery" class="footer__nav-link link">Галерея</a>
             </li>
             <li class="footer__nav-item">
               <a href="" class="footer__nav-link link">Про Нас</a>
