--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="header__left">
+        <h1 class="header__title header__title--left">ХУДОЖ
+          <br>МУЗЕЙ
+        </h1>
+
+        <div class="header__select select">
+          <div class="select__text">КВИТКИ</div>
+          <a href="#" class="select__icon">
+            <img src="./images/arrow.png" alt="select">
+          </a>
+          <div class="select__vertical">
+            <div class="select__vertical-line"></div>
+            <p class="select__vertical-text">Події</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="header__right container">
+        <h1 class="header__title  main-title header__title--right">HІЙ
+        </h1>
+        <div class="header__top top-line">
+          <a class="top-line__burger" href="#menu">
+            <img src="./images/burger.svg" alt="pic">
+          </a>
+          <a class="top-line__logo"><img src="./images/NA MU.svg" alt="pic">
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <nav class="menu header__menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__actions">
+          <a class="menu__close" href="#">X</a>
+          <a class="menu__logo" href="#"><img src="./images/NA MU.svg" alt="pic">
+          </a>
+        </div>
+        <ul class="menu__list list">
+          <li class="list__item"><a href="#gallery" class="list__link">Галерея</a></li>
+          <li class="list__item"><a href="#events" class="list__link">Виставки та події</a></li>
+          <li class="list__item"><a href="#visit" class="list__link">Відвідування</a></li>
+          <li class="list__item"><a href="#be-friend" class="list__link">Стати нашим другом</a></li>
+          <li class="list__item"><a href="#about-us" class="list__link">Про нас</a></li>
+          <li class="list__item"><a href="#shop" class="list__link">Магазин</a></li>
+          <li class="list__item"><a href="#blog" class="list__link">Блог</a></li>
+          <li class="list__item"><a href="#contacts" class="list__link">Контакти</a></li>
+        </ul>
+        <form action="#" class="form menu__form" id="form">
+          <label for="search" class="form__input">
+            <input  type="search" id="search">
+          </label>
+        </form>
+        <a href="#form" class="menu__search"></a>
+      </div>
+    </nav>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
-</html>
+
+  </html>
