--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
   <body class="page__body">
 
     <header class="page__header header">
-      <a href="#" class="header__logo link">NA<br>MU </a>
+      <a href="#" class="header__logo link">
+        <div class="header__logo-element header__logo-element--1">NA</div>
+        <div class="header__logo-element header__logo-element--2">MU</div>
+      </a>
       <div class="header__indent"></div>
       <div class="header__elements">
         <a href="#menu" class="header__menu-button">
@@ -154,7 +157,7 @@
           </li>
           <li class="gallery__images-box gallery__images-box--5">
             <img
-              src="./images/gallery/5.svg"
+              src="./images/gallery/5.png"
               alt="gallery-image-5"
               class="gallery__image">
           </li>
@@ -247,43 +250,41 @@
           <div class="footer__contacts" id="contacts">
             <div class="footer__info-title">Контакти:</div>
             <div class="footer__contacts-info">
-              вул. М. Грушевського, 6;
-              <br>
+              <a href="https://goo.gl/maps/K7qFsAibL7NKe5rEA" class="footer__link link">вул. М. Грушевського, 6;</a>
               Київ, 01001
               <br>
-              <a href="tel:38044278-13-57" class="link">тел. +38 (044) 278-13-57</a>
-              <br>
+              <a href="tel:38044278-13-57" class="footer__link link">тел. +38 (044) 278-13-57</a>
               факс +38 (044) 278-74-54
               <br>
-              <a href="mailto:info@namu.kiev.ua" class="link">e-mail: info@namu.kiev.ua</a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__link link">e-mail: info@namu.kiev.ua</a>
             </div>
           </div>
         </div>
         <div class="footer__nav">
           <ul class="footer__nav-list">
             <li class="footer__nav-item">
-              <a href="#gallery" class="footer__nav-link link">Галерея</a>
+              <a href="#gallery" class="footer__link link">Галерея</a>
             </li>
             <li class="footer__nav-item">
-              <a href="" class="footer__nav-link link">Про Нас</a>
+              <a href="" class="footer__link link">Про Нас</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#events" class="footer__nav-link link">Виставки та події</a>
+              <a href="#events" class="footer__link link">Виставки та події</a>
             </li>
             <li class="footer__nav-item">
-              <a href="" class="footer__nav-link link">Магазин</a>
+              <a href="" class="footer__link link">Магазин</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#actual" class="footer__nav-link link">Відвідування</a>
+              <a href="#actual" class="footer__link link">Відвідування</a>
             </li>
             <li class="footer__nav-item">
-              <a href="" class="footer__nav-link link">Блог</a>
+              <a href="" class="footer__link link">Блог</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#subscribe" class="footer__nav-link link">Стати нашим другом</a>
+              <a href="#subscribe" class="footer__link link">Стати нашим другом</a>
             </li>
             <li class="footer__nav-item">
-              <a href="#contacts" class="footer__nav-link link">Контакти</a>
+              <a href="#contacts" class="footer__link link">Контакти</a>
             </li>
           </ul>
         </div>
