--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Art museum</title>
+    <link rel="icon" href="./images/favicon.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__header header">
+      <div class="container">
+        <div class="header__content">
+          <a href="#" class="header__logo link">
+            NA
+            <br>
+            MU
+          </a>
+          <div class="header__elements">
+            <a href="#" class="header__opener">
+              <img src="images/opener.svg" alt="Opener">
+            </a>
+    
+            <h1 class="header__title">
+              Худож<span class="header__title--effect">ній</span>
+            </h1>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="main__events">
+        <div class="container">
+          <h3 class="main__title">Актуальні події</h3>
+
+          <article class="main__event main__event--first event">
+            <img
+              class="event__image"
+              src="images/Dnipro.png"
+              alt="Dnipro"
+            >
+
+            <div class="event__description">
+              <div class="event__type-and-date">
+                <span class="event__type">Виставка</span>
+                <span class="event__date">26.08-29.11.2019</span>
+              </div>
+              <a href="#" class="event__title link">
+                Йду і повертаюсь
+              </a>
+              <div class="event__about">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br>
+                1980-1995 років.
+              </div>
+            </div>
+          </article>
+
+          <article class="main__event event">
+            <img
+              class="event__image"
+              src="images/peacock.png"
+              alt="Dnipro"
+            >
+
+            <div class="event__description">
+              <div class="event__type-and-date">
+                <span class="event__type">Виставка</span>
+                <span class="event__date">26.08-29.11.2019</span>
+              </div>
+              <a href="#" class="event__title link">
+                І спогади і мрії
+              </a>
+              <div class="event__about">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br>
+                1980-1995 років.
+              </div>
+            </div>
+          </article> 
+        </div>
+      </section>
+
+      <section class="main__lection lection">
+        <div class="container">
+          <img
+            class="lection__image"
+            src="images/sunset.png"
+            alt="Sunset"
+          >
+          <div class="lection__card">
+
+          </div>
+        </div>
+      </section>
+    </main>
+    
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
