footer almost done

--- a/src/index.html
+++ b/src/index.html
@@ -317,7 +317,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__top-container">
-          <div class="sm-bar">
+          <div class="footer__sm-bar sm-bar">
             <a href="#" class="logo">
               <div class="logo__name">
                 NA
@@ -344,9 +344,10 @@
               </a>
             </div>
           </div>
-          <div class="workinfo">
-            <div class="workinfo__schedule">
-              <div class="workinfo__container">
+
+          <div class="footer__service-info">
+            <div class="workinfo">
+              <div class="workinfo__schedule">
                 <div class="workinfo__section-title" id="visiting">
                   Графік роботи
                 </div>
@@ -380,68 +381,68 @@
                   </span>
                   неділя
                 </div>
-              </div>
-              <div class="workinfo__ammendments">
-                <span class="workinfo__emphasize">
-                  Вихідні:
-                </span>
-                понеділок, вівторок
                 <br>
-                Каса припиняє роботу за 1 годину до закриття музею
+                <div class="workinfo__ammendments">
+                  <span class="workinfo__emphasize">
+                    Вихідні:
+                  </span>
+                  понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
               </div>
-            </div>
 
-            <div class="workinfo__contacts">
-              <div class="workinfo__section-title" id="contacts">
-                Контакти:
-              </div>
-              <div class="workinfo__contact-item">
-                <a
-                  href="https://goo.gl/maps/jkSLxZy96eADB7mr5"
+              <div class="workinfo__contacts">
+                <div class="workinfo__section-title" id="contacts">
+                  Контакти:
+                </div>
+                <div class="workinfo__contact-item">
+                  <a
+                    href="https://goo.gl/maps/jkSLxZy96eADB7mr5"
+                    class="workinfo__link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    вул. М. Грушевського, 6;
+                  </a>
+                </div>
+                <div class="workinfo__contact-item">
+                  <a
+                    href="https://goo.gl/maps/jkSLxZy96eADB7mr5"
+                    class="workinfo__link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    Київ, 01001
+                  </a>
+                </div>
+                <div class="workinfo__contact-item">
+                  <a
+                    href="tel:+380442781357"
+                    class="workinfo__link"
+                  >
+                  тел. +38 (044) 278-13-57
+                  </a>
+                </div>
+                <div class="workinfo__contact-item">
+                  <a
+                  href="tel:+380442787454"
                   class="workinfo__link"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  вул. М. Грушевського, 6;
-                </a>
-              </div>
-              <div class="workinfo__contact-item">
-                <a
-                  href="https://goo.gl/maps/jkSLxZy96eADB7mr5"
-                  class="workinfo__link"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  Київ, 01001
-                </a>
-              </div>
-              <div class="workinfo__contact-item">
-                <a
-                  href="tel:+380442781357"
-                  class="workinfo__link"
-                >
-                 тел. +38 (044) 278-13-57
-                </a>
-              </div>
-              <div class="workinfo__contact-item">
-                <a
-                href="tel:+380442787454"
-                class="workinfo__link"
-                >
-                  факс +38 (044) 278-74-54
-                </a>
-              </div>
-              <div class="workinfo__contact-item">
-                <a
-                  href="mailto:info@namu.kiev.ua"
-                  class="workinfo__link"
-                >
-                  e-mail: info@namu.kiev.ua
-                </a>
+                  >
+                    факс +38 (044) 278-74-54
+                  </a>
+                </div>
+                <div class="workinfo__contact-item">
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    class="workinfo__link"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
               </div>
             </div>
           </div>
-
           <div class="footer__sitemap sitemap">
             <ul class="sitemap__list">
               <li class="sitemap__item">
@@ -470,8 +471,21 @@
               </li>
             </ul>
           </div>
+
         </div>
 
+      </div>
+      <div class="footer__bottom">
+        <div class="container">
+          <div class="footer__bottom-box">
+            <div class="footer__copyright">
+              Copyright &copy; 2019. All Rights Reserved.
+            </div>
+            <div class="footer__author">
+              Designed by Zhyriada Marina
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
