--- a/src/index.html
+++ b/src/index.html
@@ -250,7 +250,14 @@
           <div class="footer__contacts" id="contacts">
             <div class="footer__info-title">Контакти:</div>
             <div class="footer__contacts-info">
-              <a href="https://goo.gl/maps/K7qFsAibL7NKe5rEA" class="footer__link link">вул. М. Грушевського, 6;</a>
+              <a
+                href="https://goo.gl/maps/K7qFsAibL7NKe5rEA"
+                class="footer__link link"
+                rel="noopener"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6;
+              </a>
               Київ, 01001
               <br>
               <a href="tel:38044278-13-57" class="footer__link link">тел. +38 (044) 278-13-57</a>
