--- a/src/index.html
+++ b/src/index.html
@@ -442,6 +442,11 @@
                 </div>
               </div>
             </div>
+            <a
+            href="#"
+            class="footer__go-top"
+            title="go Top"
+           ></a>
           </div>
           <div class="footer__sitemap sitemap">
             <ul class="sitemap__list">
@@ -455,7 +460,7 @@
                 <a href="#visiting" class="sitemap__link">Відвідування</a>
               </li>
               <li class="sitemap__item">
-                <a href="#bacomefriend" class="sitemap__link">Стати нашим другом</a>
+                <a href="#becomefriend" class="sitemap__link">Стати нашим другом</a>
               </li>
               <li class="sitemap__item">
                 <a href="#about-us" class="sitemap__link">Про Нас</a>
@@ -471,7 +476,6 @@
               </li>
             </ul>
           </div>
-
         </div>
 
       </div>
